# movespad

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/movespad/: bkg.py  eye_safety.py  fov.py  gui.py  intro.py  laser.py  main.py  params.py  pixel.py  pre_output.py  size.py  solar.py  spad.py  test_psg.py  tooltips.py  updated_params.py
tests/: test_laser.py  test_pixel.py
